--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -5,6 +5,7 @@
 }
 .text {
   color: #777;
+  text-align: justify;
 }
 .btn {
   display: block;
@@ -13,9 +14,10 @@
   margin: 20px auto;
   background: #000000;
   border-radius: 4px;
-  color: rgb(243, 89, 0);
+  color: rgb(0, 255, 55);
   text-align: center;
 }
 .btn:hover {
-  background-color: rgb(223, 231, 231);
+  background-color: rgb(152, 224, 18);
+  border-radius: 2px;
 }
