--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,13 +1,27 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap");
 
 body {
-  background: #f1863f;
+  background: #e2f8e4;
   color: #333;
   font-family: "Nunito";
 }
 a {
-  color: #333;
+  color: rgb(250, 250, 250);
   text-decoration: none;
+  display: block;
+  width: 120px;
+  height: 24px;
+  background-color: #333;
+  padding: 10px;
+  text-align: center;
+  line-height: 25px;
+  border-radius: 5px;
+}
+
+a:hover {
+  background-color: rgb(182, 252, 135);
+  font-weight: bold;
+  color: #000;
 }
 .content {
   max-width: 960px;
@@ -26,6 +40,7 @@ nav a {
 }
 nav .logo {
   margin-right: auto;
+  margin-top: 10px;
 }
 footer {
   display: block;
@@ -33,6 +48,6 @@ footer {
   font-weight: bold;
   padding: 30px 0;
   margin-top: 60px;
-  color: rgb(255, 255, 255);
+  color: rgb(0, 80, 24);
   border-top: 1px solid #000000;
 }
