--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,24 +5,7 @@ body {
   color: #333;
   font-family: "Nunito";
 }
-a {
-  color: rgb(250, 250, 250);
-  text-decoration: none;
-  display: block;
-  width: 120px;
-  height: 24px;
-  background-color: #333;
-  padding: 10px;
-  text-align: center;
-  line-height: 25px;
-  border-radius: 5px;
-}
 
-a:hover {
-  background-color: rgb(182, 252, 135);
-  font-weight: bold;
-  color: #000;
-}
 .content {
   max-width: 960px;
   margin: 0 auto;
@@ -37,10 +20,25 @@ nav {
 }
 nav a {
   margin-left: 12px;
+  color: rgb(250, 250, 250);
+  text-decoration: none;
+  display: block;
+  width: 120px;
+  height: 24px;
+  background-color: #333;
+  padding: 10px;
+  text-align: center;
+  line-height: 25px;
+  border-radius: 5px;
+}
+
+nav a:hover {
+  font-weight: bold;
+  background-color: rgb(140, 252, 112);
+  color: black;
 }
 nav .logo {
   margin-right: auto;
-  margin-top: 10px;
 }
 footer {
   display: block;
@@ -50,4 +48,16 @@ footer {
   margin-top: 60px;
   color: rgb(0, 80, 24);
   border-top: 1px solid #000000;
+}
+
+.cart {
+  margin-left: 20px;
+  font-size: 30px;
+}
+counter {
+}
+
+h2 {
+  font-size: 20px;
+  text-decoration: underline;
 }
