--- a/styles/Reckless.module.css
+++ b/styles/Reckless.module.css
@@ -1,5 +1,5 @@
 .single {
-  padding: 2px;
+  padding: 10px;
   background: rgb(0, 0, 0);
   display: inline-flex;
   margin: 20px 10px;
@@ -10,6 +10,7 @@
   height: 60px;
   justify-content: center;
   border-radius: 5px;
+  cursor: pointer;
 }
 .single:hover {
   border-left: 8px solid #1eff00;
@@ -23,7 +24,7 @@
   margin: 20px 10px;
   color: rgb(0, 0, 0);
   font-size: 16px;
-  width: 100px;
+  width: 150px;
   height: 60px;
   justify-content: center;
   border-radius: 5px;
@@ -43,25 +44,26 @@
 
 .count_btn {
   box-sizing: border-box;
-  background-color: rgb(179, 255, 0);
-  color: black;
+  background-color: rgb(54, 82, 54);
+  color: rgb(255, 255, 255);
   font-size: 16px;
   padding: 5px;
   margin-right: 10px;
-  width: 100px;
+  width: 90px;
   display: inline-flex;
   text-align: center;
   cursor: pointer;
   justify-content: center;
+  border-radius: 5px;
 }
 
 .count_btn_remove {
   box-sizing: border-box;
-  background-color: rgb(238, 37, 37);
+  background-color: rgb(245, 167, 167);
   color: black;
   font-size: 16px;
   padding: 5px;
-  width: 100px;
+  width: 80px;
   display: inline-flex;
   text-align: center;
   cursor: pointer;
@@ -70,8 +72,24 @@
   justify-content: center;
 }
 .count_btn:hover {
-  background-color: rgb(176, 252, 208);
+  background-color: rgb(51, 143, 89);
 }
 .count_btn_remove:hover {
-  background-color: rgb(252, 176, 176);
+  background-color: rgb(241, 37, 37);
+}
+
+.title {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.container {
+  display: flex;
+  align-items: center;
+}
+
+.prod_img {
+  display: block;
+  padding: 20px;
 }
