--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -7,4 +7,26 @@
   color: #777;
 
   text-align: justify;
-}  
+}
+
+.btn {
+  color: rgb(250, 250, 250);
+  text-decoration: none;
+  display: block;
+  width: 200px;
+  height: 40px;
+  font-size: 18px;
+  background-color: #333;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+  font-family: "Nunito";
+}
+.btn:hover {
+  background-color: #6ffa5d;
+  border-style: none;
+  color: black;
+  font-weight: 600;
+}
